--- a/Index.html
+++ b/Index.html
@@ -171,7 +171,7 @@
       <script src="JS/JVS.js"></script>
     <script src="JS/Canasta.js"></script>
     <footer>
-        © Todos los derechos reservados.
+        © Todos los derechos reservados-Fernando Anzora-Angel Alfaro-Andrade Garcia-Kevin Humberto.
     </footer>
 </body>
 </html>
